backend/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-crypto-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 5000
  selector:
    app: flask-crypto
